--- a/views/room.html
+++ b/views/room.html
@@ -34,7 +34,7 @@
     </table><br>
     <form id="message" autocomplete="off">
        <input type="input" placeholder="message everyone" id="input" required />
-      <input type="submit" id="submit">
+      <input type="submit" id="submit" value="send">
     </form>
 
     <script src="/socket.js"></script>
