--- a/views/index.html
+++ b/views/index.html
@@ -35,6 +35,7 @@
         </form>
       </div>
     </div>
+    <script src="/socket.js"></script>
     <script src="/script.js"></script>
   </body>
 </html>
